tests/syntax-error/Leap.php
<?php

declare(strict_types=1);

function isLeapQ@#^&bADn
